Исправление тест классов на использование метода коллекций of()