@@ -15,7 +15,7 @@ public class ConvertListTest {
         List<int[]> in = new ArrayList<>();
         in.add(new int[] {1});
         in.add(new int[] {2, 3});
-        List<Integer> expect = Arrays.asList(1, 2, 3);
+        List<Integer> expect = List.of(1, 2, 3);
         assertThat(ConvertList.convert(in), is(expect));
     }
 
@@ -26,7 +26,7 @@ public class ConvertListTest {
         in.add(new int[] {2, 3});
         in.add(new int[] {4, 5});
         in.add(new int[] {6, 7, 8, 9, 10});
-        List<Integer> expect = Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9, 10);
+        List<Integer> expect = List.of(1, 2, 3, 4, 5, 6, 7, 8, 9, 10);
         assertThat(ConvertList.convert(in), is(expect));
     }
 }
