@@ -18,7 +18,7 @@ public class FullSearchTest {
                 new Task("2", "Second desc"),
                 new Task("1", "First desc")
         );
-        Set<String> expected = new HashSet<>(Arrays.asList("1", "2"));
+        Set<String> expected = Set.of("1", "2");
         assertThat(FullSearch.extractNumber(tasks), is(expected));
     }
 
@@ -32,7 +32,7 @@ public class FullSearchTest {
                 new Task("4", "T5"),
                 new Task("5", "T6")
         );
-        Set<String> expected = new HashSet<>(Arrays.asList("1", "3", "4", "5"));
+        Set<String> expected = Set.of("1", "3", "4", "5");
         assertThat(FullSearch.extractNumber(tasks), is(expected));
     }
 }
